Broken style fixes, placeholder fixes

--- a/public/less/handbid.less
+++ b/public/less/handbid.less
@@ -359,9 +359,9 @@ body.handbid-logged-in {
 
 .simple-box:hover {
 
-    -webkit-box-shadow: 2px 3px 0px 0px @dropShadow;
-    -moz-box-shadow: 2px 3px 0px 0px @dropShadow;
-    box-shadow: 2px 3px 0px 0px @dropShadow;
+    -webkit-box-shadow: 2px 3px 0px 0px rgba(217, 217, 217, 1);
+    -moz-box-shadow: 2px 3px 0px 0px rgba(217, 217, 217, 1);
+    box-shadow: 2px 3px 0px 0px rgba(217, 217, 217, 1);
 
     border: 1px solid @mediumGray;
 
@@ -957,10 +957,10 @@ body.handbid-logged-in {
       border-color: @green;
     }
     .ticket-row:first-of-type {
-        border-top: 1px solid @dropShadow;
+        border-top: 1px solid rgba(217, 217, 217, 1);
     }
     .ticket-row {
-        border-bottom: 1px solid @dropShadow;
+        border-bottom: 1px solid rgba(217, 217, 217, 1);
     }
 
     .ticket-container {
@@ -968,7 +968,7 @@ body.handbid-logged-in {
         display: inline-block;
     }
     .ticket:nth-child(even) {
-//        border-left: 1px solid @dropShadow;
+//        border-left: 1px solid rgba(217, 217, 217, 1);
     }
 }
 
@@ -3858,10 +3858,10 @@ div.handbid-modal[data-handbid-modal-key="credit-card-form"] {
             border: none;
         }
         .ticket {
-            border-top: 1px solid @dropShadow;
+            border-top: 1px solid rgba(217, 217, 217, 1);
         }
         .ticket:last-of-type {
-            border-bottom: 1px solid @dropShadow;
+            border-bottom: 1px solid rgba(217, 217, 217, 1);
         }
         .ticket:nth-child(even) {
             border-left: none;
